# SculptPath

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  vcpkg.json
SculptPath-PY/: EntryPointCalculator.py  GridRayIntersector.py  MeshLoader.py  NonPlanarNavigation.py  PlaneIntersect.py  RayMeshIntersector.py  VolumeNavigator.py  main.py
SculptPath-PY/gcode/: GcodeManager.py
assets/: np_test_2.stl  np_test_2.stl.stl  test_mp_2.off
datadriven/: CMakeLists.txt  readme.txt
datadriven/datapy/: collectData.py
datadriven/meshfiles/: cube.stl
datadriven/settings/: settings_1.json
datadriven/src/: Geometry.h  Intersect.cpp  Intersect.h  Mesh.cpp  Mesh.h  main.cpp
datadriven/src/ml/: FactoryGCODE.cpp  FactoryGCODE.h
datadriven/src/settings/: Settings.cpp  Settings.h
datadriven/src/volnag/: GlobularCast.cpp  GlobularCast.h  PlanarDispertionRayCast.cpp  PlanarDispertionRayCast.h  VolnavPoint.h  VolumeNavigation.cpp  VolumeNavigation.h
src/: MCUT_HW.cpp  MCUT_HW.h  RECON_HW.cpp  RECON_HW.h  main.cpp
src/mesh_loader/: FileInjest.cpp  FileInjest.h  MeshLoad.cpp  MeshLoad.h  file_processor.py
src/non_planar/: GlobularResult.cpp  GlobularResult.h  Intersect.cpp  Intersect.h  MeshBoolean.cpp  MeshBoolean.h  MeshException.h  MeshGenerator.cpp  MeshGenerator.h  PointPopulater.cpp  PointPopulater.h  Settings.cpp  Settings.h  Slicer.cpp  Slicer.h  visualizer.py
src/non_planar/fileWriter/: ThreadThreadSafeFileWriter.cpp  ThreadThreadSafeFileWriter.h
src/non_planar/surface_labeling/: MeshSurfaceEstimation.cpp  MeshSurfaceEstimation.h
src/non_planar/volume_iterator/: CentroidIntersection.cpp  CentroidIntersection.h  PointAnalyzer.cpp  PointAnalyzer.h  VolumeEntry.cpp  VolumeEntry.h  VolumeIterator.cpp  VolumeIterator.h
src/non_planar/volume_labeling/: MeshLabeling.cpp  MeshLabeling.h  Segmentation.cpp  Segmentation.h
src/non_planar/volume_navigation/: MeshTriangulation.cpp  MeshTriangulation.h
